Bug 466085 - Toot interaction icons not shown on Android
Summary: Toot interaction icons not shown on Android
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-19 13:52 UTC by Nicolas Fella
Modified: 2023-02-21 16:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (653.71 KB, image/png)
2023-02-19 13:52 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-02-19 13:52:23 UTC
Created attachment 156493 [details]
Screenshot

The icons for boost/favorite/reply etc are not visible on Android. See screenshot
Comment 1 Joshua Goins 2023-02-21 16:08:22 UTC
Git commit 68d3c321a35e0fb7018fdf5e13ed3570685f0d65 by Joshua Goins.
Committed on 21/02/2023 at 16:07.
Pushed by redstrate into branch 'master'.

Set custom icon theme on Android

Use our custom icon theme on Android, where it wasn't set before.

M  +1    -0    src/main.cpp

https://invent.kde.org/network/tokodon/commit/68d3c321a35e0fb7018fdf5e13ed3570685f0d65