Set custom icon theme on Android

Use our custom icon theme on Android, where it wasn't set before.

BUG: 466085